# lifthrasir

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  mise.toml  release-please-config.json
game-engine/: Cargo.toml
game-engine/docs/: ACT_FORMAT.md
game-engine/examples/: dump_act.rs
game-engine/src/: lib.rs
game-engine/src/app/: audio_plugin.rs  authentication_plugin.rs  character_domain_plugin.rs  combat_plugin.rs  entity_hover_plugin.rs  entity_spawning_plugin.rs  input_plugin.rs  map_domain_plugin.rs  map_plugin.rs  mod.rs  movement_plugin.rs  native_input_plugin.rs  plugin.rs  sprite_rendering_domain_plugin.rs  zone_domain_plugin.rs
game-engine/src/core/: events.rs  mod.rs  observers.rs  resources.rs  state.rs
game-engine/src/domain/: mod.rs  system_sets.rs
game-engine/src/domain/assets/: catalog.rs  components.rs  mod.rs  patterns.rs
game-engine/src/domain/audio/: components.rs  events.rs  map_sounds.rs  mod.rs  plugin.rs  resources.rs  systems.rs
game-engine/src/domain/authentication/: components.rs  events.rs  mod.rs  models.rs  server_selection_handler.rs  services.rs  systems.rs
game-engine/src/domain/camera/: components.rs  controller.rs  mod.rs  resources.rs  systems.rs
game-engine/src/domain/cart/: mod.rs  plugin.rs  resource.rs  systems.rs
game-engine/src/domain/character/: catalog.rs  catalog_builder.rs  char_server_send.rs  chat.rs  components.rs  creation.rs  events.rs  forms.rs  local_player.rs  map_loading.rs  mod.rs  plugin.rs  selection.rs  systems.rs  zone.rs
game-engine/src/domain/combat/: casting.rs  components.rs  death.rs  events.rs  mod.rs  plugin.rs  systems.rs
game-engine/src/domain/effects/: components.rs  debug.rs  events.rs  map_effects.rs  mod.rs  sprite_effects.rs  status_visuals.rs  systems.rs  triggers.rs
game-engine/src/domain/emote/: assets.rs  mod.rs  plugin.rs  render.rs  send.rs  table.rs
game-engine/src/domain/entities/: animation.rs  billboard.rs  components.rs  cursor_interaction.rs  hover.rs  hover_plugin.rs  hover_system.rs  markers.rs  mod.rs  name_cache.rs  name_request_system.rs  picking.rs  registry.rs  sprite_factory.rs  systems.rs  types.rs
game-engine/src/domain/equipment/: local_equipment.rs  local_headgear.rs  location.rs  mod.rs  plugin.rs  request.rs  result.rs  sprite_change.rs
game-engine/src/domain/guild/: mod.rs  plugin.rs  resource.rs  systems.rs
game-engine/src/domain/hotbar/: dispatch.rs  mod.rs  model.rs  persistence.rs
game-engine/src/domain/input/: actions.rs  cursor.rs  events.rs  mod.rs  resources.rs  systems.rs  targeting.rs  terrain_raycast.rs  ui_focus.rs
game-engine/src/domain/inventory/: events.rs  item.rs  mod.rs  plugin.rs  resource.rs  systems.rs  use_item.rs
game-engine/src/domain/item_drop/: animation.rs  components.rs  hover.rs  mod.rs  pickup.rs  pickup_anim.rs  plugin.rs  spawn.rs
game-engine/src/domain/party/: mod.rs  plugin.rs  resource.rs  systems.rs
game-engine/src/domain/settings/: apply.rs  events.rs  mod.rs  persistence.rs  resources.rs
game-engine/src/domain/skill/: cast.rs  cooldown.rs  feedback.rs  inf.rs  layout.rs  mod.rs  state.rs
game-engine/src/domain/skill_units/: components.rs  lifecycle.rs  mod.rs  spawn.rs  systems.rs  tests.rs  visuals.rs
game-engine/src/domain/sprite/: kinds.rs  mod.rs  tags.rs
game-engine/src/domain/storage/: mod.rs  plugin.rs  resource.rs  systems.rs
game-engine/src/domain/world/: components.rs  loading_progress.rs  map.rs  map_loader.rs  map_scoped.rs  mod.rs  spawn_context.rs  systems.rs  terrain.rs  warp.rs  zone_readiness.rs
game-engine/src/infrastructure/: mod.rs  ro_formats.rs
game-engine/src/infrastructure/accessory/: asset.rs  mod.rs  plugin.rs  registry.rs
game-engine/src/infrastructure/assets/: animation_processing_system.rs  animation_processor.rs  bgm_name_table_loader.rs  config.rs  (+14 more)
game-engine/src/plugins/: assets_plugin.rs  audio_plugin.rs  input_plugin.rs  mod.rs  rendering_plugin.rs  world_domain_plugin.rs  world_plugin.rs
game-engine/src/presentation/: mod.rs
game-engine/src/utils/: constants.rs  coordinates.rs  mipmap.rs  mod.rs  string_utils.rs  time.rs
game-engine/tests/: lua_decompile_test.rs  no_transport_dep.rs  observer_migration_tests.rs
game-engine/tests/integration/: networking_tests.rs
grf-utils/: Cargo.toml
grf-utils/src/: main.rs
lifthrasir/: Cargo.toml  build.rs
lifthrasir-ui/: Cargo.toml
lifthrasir-ui/src/: cursor.rs  focus.rs  lib.rs  rich_text.rs  theme.rs
lifthrasir-ui/src/screens/: character_create.rs  character_preview.rs  character_select.rs  fade.rs  loading.rs  login.rs  menu_background.rs  mod.rs  server_select.rs
lifthrasir-ui/src/theme/: feathers_theme.rs  mod.rs
lifthrasir-ui/src/widgets/: announcement.rs  character_info.rs  chat_box.rs  chrome.rs  death_dialog.rs  draggable.rs  escape_menu.rs  hotbar.rs  inventory_window.rs  minimap.rs  mod.rs  placeholder.rs  player_context_menu.rs  settings_window.rs  skill_window.rs  status_window.rs  system_dialog.rs
lifthrasir-ui/src/worldspace/: damage_numbers.rs  floor_item_labels.rs  mod.rs  nameplates.rs  skill_cast_labels.rs
lifthrasir/src/: assets.rs  main.rs
ro-to-lifthrasir-cli/: Cargo.toml
ro-to-lifthrasir-cli/src/: config.rs  decompile.rs  encoding.rs  escape.rs  grf_vfs.rs  lua.rs  main.rs  proto_gen.rs
ro-to-lifthrasir-cli/src/converters/: accessory.rs  item.rs  job.rs  mod.rs  skill.rs  status_icon.rs  weapon.rs
src-tauri/: Cargo.toml  tauri.conf.dev2.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: bevy_integration.rs  config.rs  main.rs  plugin.rs  resources.rs  tauri_setup.rs
src-tauri/src/bridge/: app_bridge.rs  correlation.rs  demux.rs  event_emitter.rs  event_translator.rs  event_writers.rs  events.rs  macros.rs  mod.rs  pending_senders.rs  request_id.rs  response_writer.rs
src-tauri/src/commands/: assets.rs  auth.rs  character_creation.rs  character_selection.rs  character_status.rs  chat.rs  dev.rs  input.rs  mod.rs  server_selection.rs  sprite_png.rs  zone_status.rs
(+791 files in other folders)
