[workspace]
resolver = "2"
members = [
    "game-engine",
    "grf-utils",
    "lifthrasir-data",
    "lifthrasir-ui",
    "lifthrasir",
    "ro-formats",
    "ro-to-lifthrasir-cli",
]

[workspace.package]
version = "0.0.1"
edition = "2021"

[workspace.dependencies]
bevy = { version = "0.19.0", features = ["jpeg", "wayland"] }
bevy_feathers = "0.19.0"
secrecy = { version = "0.10", features = ["serde"] }
leafwing-input-manager = "0.21"
bevy_quinnet = { git = "https://github.com/ycastorium/bevy_quinnet.git", branch = "bevy-0.19" }
prost = "0.14"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.dist]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
