[package]
name = "grf-utils"
version.workspace = true
edition.workspace = true

[[bin]]
name = "grf-utils"
path = "src/main.rs"

[dependencies]
game-engine = { path = "../game-engine" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17"

[profile.release]
strip = true
lto = true
