[package]
name = "grf-utils"
version.workspace = true
edition.workspace = true

[[bin]]
name = "grf-utils"
path = "src/main.rs"

[dependencies]
ro-formats = { path = "../ro-formats" }
clap = { workspace = true }
anyhow = { workspace = true }
indicatif = "0.18"

[profile.release]
strip = true
lto = true
