[package]
name = "lifthrasir-ui"
version.workspace = true
edition.workspace = true

[dependencies]
bevy = { workspace = true }
bevy_feathers = { workspace = true }
bevy-persistent = { version = "0.11", features = ["ron"] }
game-engine = { path = "../game-engine" }
net-contract = { path = "../net-contract" }
leafwing-input-manager = { workspace = true }
secrecy = { workspace = true }

[features]
dlss = ["bevy/dlss"]

[dev-dependencies]
lifthrasir-data = { path = "../lifthrasir-data" }
