[package]
name = "lifthrasir-ui"
version.workspace = true
edition.workspace = true

[dependencies]
bevy = { workspace = true }
bevy_feathers = { workspace = true }
bevy-persistent = { workspace = true }
game-engine = { path = "../game-engine" }
iyes_progress = { workspace = true }
net-contract = { path = "../net-contract" }
leafwing-input-manager = { workspace = true }
secrecy = { workspace = true }
rfd = { workspace = true }

[features]
dlss = ["bevy/dlss"]

[dev-dependencies]
lifthrasir-data = { path = "../lifthrasir-data" }
