[package]
name = "lifthrasir"
version.workspace = true
edition.workspace = true

[features]
default = []
# Profiling and live-inspection tooling. Opt-in via `--features dev`; normal
# builds (and distribution) stay clean of Tracy/remote-inspection overhead.
dev = [
    "bevy/trace",
    "bevy/trace_tracy",
    "bevy/bevy_remote",
    "dep:bevy_brp_extras",
]

[dependencies]
bevy = { workspace = true }
bevy_framepace = "0.21"
bevy_brp_extras = { version = "0.19.0", optional = true }
game-engine = { path = "../game-engine" }
lifthrasir-ui = { path = "../lifthrasir-ui" }
toml = "0.9"
