[package]
name = "ro-to-lifthrasir-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ro-to-lifthrasir-cli"
path = "src/main.rs"

[dependencies]
ro-formats = { path = "../ro-formats" }
lifthrasir-data = { path = "../lifthrasir-data" }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
encoding_rs = { workspace = true }
mlua = { version = "0.11", features = ["lua51", "vendored"] }
luadec = "0.2"
gag = "1.0"
protox = "0.9"
prost-build = "0.14"
tempfile = "3"
