[package]
name = "lifthrasir-tauri"
version.workspace = true
edition.workspace = true

[dependencies]
game-engine = { path = "../game-engine" }
bevy = { version = "0.18.1", features = [
    "dynamic_linking",
    "jpeg",
    "bevy_dev_tools",
    "bevy_remote",
] }
bevy_framepace = "0.21"
bevy_auto_plugin = "0.10.0"

# Tauri dependencies
tauri = { version = "2.11.2", features = ["macos-private-api"] }

# Additional Tauri integration dependencies
# wgpu is pinned here (no direct `use`) to control wgpu feature unification for the
# custom Tauri-Bevy renderer init in bevy_integration.rs — do not remove.
wgpu = "27.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Security dependencies (used in bridge)
secrecy = { version = "0.10", features = ["serde"] }

# Async dependencies (used in bridge)
tokio = { version = "1.48", features = ["sync", "time", "rt"] }
flume = "0.12"

# Configuration parsing
toml = "0.9"
bevy_brp_extras = "0.19.0"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }
